--- a/MALAK1.html
+++ b/MALAK1.html
@@ -12,7 +12,7 @@
      Arab cities in terms of population, with a population of about 
      4 million in 2014, making it also one of the fastest growing 
      cities in the world.
-<script src="scripts.js"></script>
+<script src="malk.js"></script>
 </body>
 
 
